--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,18 @@
+html{
+    background-image: linear-gradient(to bottom,white 0%, rgb(50, 50, 50) 100%);
+}
+
 body{
     font-family:Arial, Helvetica, sans-serif;
     font-size:100%;
-    margin-left:10px;
+    margin:15px auto;
+    padding:15px 1.5em;
+    width:1000px;
+    background-color:white;
+    border:1px solid black;
+    border-radius:25px;
+    box-shadow:5px 5px 0 0
+
 }
 a:focus, a:hover{
     font-style:italic;
