--- a/styles/main.css
+++ b/styles/main.css
@@ -52,3 +52,17 @@ footer p.copyright{
     text-align:center;
     font-size:80%;
 }
+nav{
+    margin:1.5em 2em 1.5em;
+    border:5px dashed black;
+    border-radius:20px;
+    box-shadow:3px 3px 4px 4px black;
+    padding: 1em;
+}
+div{
+    margin:1.5em 2em 0em;
+    border:5px double black;
+    border-radius:20px;
+    box-shadow:3px 3px 4px 4px black;
+    padding: 1em;
+}
