--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,7 @@ header h2{
     text-indent:30px;
 }
 header img{
-    float:left;
+    float:left 4em;
 }
 .shadow{
     text-shadow:2px 2px 2px rgb(20,120,120);
