--- a/styles/main.css
+++ b/styles/main.css
@@ -30,7 +30,6 @@ header h2{
 }
 header img{
     float:left;
-    margin-left:2em;
 }
 .shadow{
     text-shadow:2px 2px 2px rgb(20,120,120);
@@ -46,19 +45,15 @@ main h3{
     padding: 1em;
     font-size:105%;
 }
-#list{
-    line-height:1.5em;
-}
-footer p.copyright{
-    text-align:center;
-    font-size:80%;
-}
-nav{
+main nav{
     margin:1.5em 2em 1.5em;
     border:5px dashed black;
     border-radius:20px;
     box-shadow:3px 3px 4px 4px black;
     padding: 1em;
+}
+#list{
+    line-height:1.5em;
 }
 div.contact{
     margin:1.5em 2em 0em;
@@ -66,4 +61,8 @@ div.contact{
     border-radius:20px;
     box-shadow:3px 3px 4px 4px black;
     padding: 1em;
+}
+footer p.copyright{
+    text-align:center;
+    font-size:80%;
 }
