--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,9 @@ a:focus, a:hover{
     font-style:italic;
     color: orange;
 }
+header{
+    margin-left:2em;
+}
 header h1{
     font-size:175%;
     color:maroon;
