--- a/styles/project.css
+++ b/styles/project.css
@@ -51,3 +51,19 @@ article{
 article h3{
     column-span: all;
 }
+article img{
+    float: left;
+    margin-right:1em;
+    margin-bottom:1em;
+}
+article p::first-letter{
+    font-style: italic;
+    font-size: 3em;
+    font-weight: bold;
+}
+aside{
+    width:20%;
+    float:right;
+    background-color: gray;
+    padding:
+}
