--- a/styles/project.css
+++ b/styles/project.css
@@ -81,5 +81,6 @@ p.fixed{
     bottom: 35%;
     right:0;
     border: 3px solid black;
-    background-color:lightgray
+    background-color:lightgray;
+    padding:3em;
 }
