--- a/styles/project.css
+++ b/styles/project.css
@@ -46,7 +46,7 @@ article{
     column-count: 2;
     column-rule: 2px dotted black;
     column-gap: 2em;
-    margin-left: 2em;
+    margin:2em,0,2em,0;
 }
 article h3{
     column-span: all;
