--- a/styles/project.css
+++ b/styles/project.css
@@ -66,7 +66,8 @@ aside{
     width:20%;
     float:right;
     background-color: lightgray;
-    padding:0.1em 1em 1.5em
+    padding:0.1em 1em 1.5em;
+    border-top: 2px solid black;
 }
 footer{
     clear:both;
