--- a/styles/project.css
+++ b/styles/project.css
@@ -50,6 +50,7 @@ article{
     column-rule: 2px dotted black;
     column-gap: 2em;
     margin-left:2em;
+    padding-bottom: 1em;
 }
 article h3{
     column-span: all;
