--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,6 +1,8 @@
-nav{
-    padding: 1em 4em;
-    background-color:blue;
+nav ul{
+    display: inline;
+    padding: 1em 3em;
+    background-color: blue;
+    color:white;
 }
 nav li:hover{
     color:yellow;
@@ -9,10 +11,13 @@ nav li:focus{
     color:yellow;
 }
 
-body div{
+article div{
     font-size: 2.5em;
     font-weight:bold;
-    margin: 1em;
+}
+article p{
+    font-size: 1em;
+    font-weight: 100;
 }
 
 aside ol{
