--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,4 +1,5 @@
 #nav_menu ul{
+    list-style-type: none;
     display: inline;
     padding: 1em 3em;
     background-color: blue;
@@ -12,9 +13,10 @@
     color:yellow;
 }
 
-article div{
+.Subheading{
     font-size: 2.5em;
     font-weight:bold;
+    display:block;
 }
 article p{
     font-size: 1em;
