--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,9 +1,8 @@
 #nav_menu ul{
-    list-style-type: none;
     display: inline;
     padding: 1em 3em;
     background-color: blue;
-    color:white;
+    color:black;
     text-decoration: none;
 }
 #nav_menu li:hover{
