--- a/styles/menu.css
+++ b/styles/menu.css
@@ -3,11 +3,13 @@ body{
 }
 #nav_menu ul{
     list-style-type: none;
-    display: inline;
     padding: 1em 3em;
     background-color: blue;
     color:black;
     text-decoration: none;
+}
+#nav_menu li{
+    display: inline;
 }
 #nav_menu li:hover{
     color:yellow;
