--- a/styles/menu.css
+++ b/styles/menu.css
@@ -3,14 +3,15 @@ body{
 }
 #nav_menu ul{
     list-style-type: none;
-    padding: 1em 3em;
-    background-color: blue;
-    color:black;
-    text-decoration: none;
 }
 #nav_menu li{
     display: inline;
     color: white;
+    padding: 1em 3em;
+    background-color: blue;
+    text-decoration: none;
+    font-weight: bold;
+    border-right: 2px white;
 }
 #nav_menu li:hover{
     color:yellow;
