--- a/styles/menu.css
+++ b/styles/menu.css
@@ -5,7 +5,7 @@ body{
     list-style-type: none;
     margin-bottom: 3em;
     position: relative;
-    left: 100px;
+    right: 3em;
 }
 #nav_menu li{
     display: inline;
