--- a/styles/news.css
+++ b/styles/news.css
@@ -23,7 +23,7 @@ aside{
     position: fixed;
     right: 0%;
     bottom: 50%;
-    margin:2em 5em 2em 2em;
+    padding:2em 5em 2em 2em;
     background-color: rgb(138, 183, 212);
     border:2px;
     border-color: rgb(59, 64, 106);
