--- a/styles/news.css
+++ b/styles/news.css
@@ -6,7 +6,7 @@ body{
     column-rule: dotted 2px blue;
     column-width: 25%;
     background-color:white;
-    border:1px solid black;
+    border:1px solid rgb(138, 183, 212);
     border-radius:25px;
     box-shadow:5px 5px 0 0
 }
