--- a/styles/project.css
+++ b/styles/project.css
@@ -5,8 +5,8 @@ html{
 body{
     font-family:Arial, Helvetica, sans-serif;
     font-size:100%;
-    margin:15px auto;
-    padding:30px 1.5em;
+    margin:30px auto;
+    padding:1.5em;
     width:90%;
     background-color:white;
     border:1px solid black;
