--- a/styles/news.css
+++ b/styles/news.css
@@ -22,7 +22,7 @@ img{
     float:left;
     margin-right: 1em;
 }
-h2 p::first-letter{
+.Text::first-letter{
     font-size: 2em;
     font-weight: bold;
     font-style: italic;
