--- a/styles/news.css
+++ b/styles/news.css
@@ -11,6 +11,7 @@ body{
 }
 article{
     width:75%;
+    margin-left: 2em;
     float:left;
     column-count: 3;
     column-gap: 1em;
@@ -49,6 +50,7 @@ aside ul{
     column-span: all;
     list-style-type: none;
     margin-bottom: 2em;
+    margin-left: 2em;
     position: relative;
     padding-bottom: 2em;
     border-bottom: 2px solid blue;
