--- a/styles/news.css
+++ b/styles/news.css
@@ -20,6 +20,12 @@ article{
 }
 h1{
     column-span: all;
+    font-family:Arial, Helvetica, sans-serif;
+    color: blue;
+}
+h2{
+    font-family:Arial, Helvetica, sans-serif;
+    color: blue;
 }
 img{
     float:left;
