--- a/styles/news.css
+++ b/styles/news.css
@@ -3,7 +3,8 @@ html{
 }
 body{
     width:95%;
-    padding:3em auto;
+    margin: 15px auto;
+    padding:3em;
     background-color:white;
     border:1px solid black;
     border-radius:25px;
@@ -16,7 +17,6 @@ article{
     column-count: 3;
     column-gap: 1em;
     column-rule: dotted 2px blue;
-    column-width: 15%;
 }
 h1{
     column-span: all;
