--- a/styles/rwd.css
+++ b/styles/rwd.css
@@ -1,5 +1,14 @@
-#nav_menu{
+header{
     height: 3em;
     width: 100%;
     background-image:linear-gradient(to right,rgb(255, 196, 0) 0%,rgb(255, 88, 28));
+}
+#nav_menu{
+    list-style-type: none;
+    float:right
+}
+#nav_menu li{
+    display: inline;
+    float: right;
+    color: white
 }
