--- a/styles/rwd.css
+++ b/styles/rwd.css
@@ -111,7 +111,7 @@ footer{
     font-size: .8em;
 }
 /*---------------------------------------------------------------*/
-@media all (max-width:700px){
+@media all and (max-width:700px){
 .menu-button-container {
     display: flex;
 }
